[package]
name = "dll"
version = "0.2.0"
edition = "2021"
authors = ["aachou"]
license = "MIT"
description = "Install the missing DLL file with one command!"
readme = "README.md"
repository = "https://github.com/aachou/dll-rs"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
minreq = { version = "2.11.0", features = ["https", "proxy"] }
regex = "1.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6.6"

[dev-dependencies]
mockito = "1"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
opt-level = "s"
