[package]
name = "dll"
version = "0.4.2"
edition = "2021"
authors = ["aachou"]
license = "MIT"
description = "Install the missing DLL file with one command!"
readme = "README.md"
repository = "https://github.com/aachou/dll-rs"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "gzip", "socks"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
thiserror = "2"

[dev-dependencies]
mockito = "1"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
opt-level = "s"